--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="img-container">
-      <img src="/assets/images/mesquare.jpg" alt="">
+      <img src="assets/images/mesquare.jpg" alt="">
     </div>
     <div class="header">
       <div class="personal-info">
